adicionando packges, javadoc e exceptions em analisador port scan