@@ -1,51 +1,62 @@
-// ======================== Importação de bibliotecas e declaração do package =========================
-package model.services;
+package Model.services;
 
-import model.entities.PortScan;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Map;
+import java.util.Set;
 
-// ==================================== Declaração da classe e seus atributos =========================
+import Model.entities.PortScan;
+import Model.exceptions.IpInvalidoException;
 
-public class AnalisadorPortScan extends AnalisadorTrafego{
+/**
+ * Analisador especializado em detectar varredura de portas.
+ * Rastreia quantas portas diferentes um IP tenta acessar.
+ */
+public class AnalisadorPortScan extends AnalisadorTrafego {
+    private Map<String, Set<String>> portasVarridasPorIp;
+    private static final int LIMITE_PORTAS = 10;
 
-    private Map<String, PortScan > incidentesPorIp;
-
-// ============================ Construtor e inicialização dos atributos =======================
-
-    public AnalisadorPortScan(SOCEngine engine){
-        super(engine);
-        this.incidentesPorIp = new HashMap<>();
+    /**
+     * Construtor que inicializa o rastreamento de portas.
+     * 
+     * @param engine Motor SOC
+     * @param caminhoArquivo Caminho do log
+     */
+    public AnalisadorPortScan(SOCEngine engine, String caminhoArquivo) {
+        super(engine, caminhoArquivo);
+        this.portasVarridasPorIp = new HashMap<>();
     }
 
-// ====================================== Processamento e detecção do padrão de ataque =================================
-
+    /**
+     * Processa linhas do log contando portas distintas por IP.
+     * Formato esperado: timestamp,ipOrigem,ipDestino,porta,acao
+     * 
+     * @param linhaLog Linha do arquivo
+     */
     @Override
-    public void processarLinhaBruta(String linhaLog){
-        try{
-            if (linhaLog == null || linhaLog.trim().isEmpty()) return;
-            String[] partes = linhaLog.split("\\|");
+    public void processarLinhaBruta(String linhaLog) {
+        try {
+            if (linhaLog == null || linhaLog.isBlank()) return;
+            String[] campos = linhaLog.split(",");
+            if (campos.length != 5) return;
 
-            if (partes.length < 5) return;
+            String ipOrigem = campos[1].trim();
+            String ipDestino = campos[2].trim();
+            String porta = campos[3].trim();
 
-            String ipOrigem  = partes[1].trim();
-            String ipDestino = partes[2].trim();
-            String status    = partes[4].trim();
+            portasVarridasPorIp.putIfAbsent(ipOrigem, new HashSet<>());
+            Set<String> portas = portasVarridasPorIp.get(ipOrigem);
+            portas.add(porta);
 
-            if (status.equalsIgnoreCase("SCAN")){
-                if (incidentesPorIp.containsKey(ipOrigem)){
-                    PortScan incidenteExistente = incidentesPorIp.get(ipOrigem);
-                    incidenteExistente.incrementarPortas();
-                }else{
-                    PortScan incidente = new PortScan(ipOrigem, ipDestino);
-                    incidente.incrementarPortas();
-                    incidentesPorIp.put(ipOrigem, incidente);
-                    engine.receberIncidente(incidente);
-                }
+            if (portas.size() == LIMITE_PORTAS) {
+                PortScan incidente = new PortScan(ipOrigem, ipDestino, portas.size());
+                this.engine.receberIncidente(incidente);
+                portas.clear();
             }
-
-        }catch (Exception e){
-            System.out.println("  [AnalisadorPortScan] Erro ao processar linha: " + e.getMessage());
+        } catch (IpInvalidoException e) {
+            System.err.println("[AnalisadorPortScan] " + e.getMessage());
+        } catch (Exception e) {
+            // Ignora silenciosamente
         }
     }
 }
